.provarCaches/00D5f000005vwGkEAI/objects/rstk__somsa__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_somsa</customHelpPage>
    <description>somsa__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__somsa_div__r.rstk__sydiv_div__c &amp;&apos;_&apos;&amp; rstk__somsa_title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__somsa_title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__somsa_active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this Master Services Agreement is Active.  An MSA must be active in order to be used to create a Customer MSA.</inlineHelpText>
        <label>MSA is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__somsa_currev__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>System assigned Revision.  Revision is initialized to 1 on an add, and incremented as MSA Clause records associated with this Master Services Agreement are modified.</inlineHelpText>
        <label>Current Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__somsa_desc__c</fullName>
        <inlineHelpText>User-defined description for this Master Services Agreement.  Value can be alpha-numeric, up to 255 characters in length.</inlineHelpText>
        <label>MSA Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__somsa_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Division for which this Master Services Agreement is applicable.</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Master Services Agreement</relationshipLabel>
        <relationshipName>somsas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__somsa_resp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Mfg User record for the user responsible for this Master Services Agreement.</inlineHelpText>
        <label>MSA Responsible User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Master Services Agreement Template</relationshipLabel>
        <relationshipName>somsas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__somsa_revdate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>System assigned Revision Date.  Revision Date is initialized to TODAY on an add, and updated each time a Revision is made.</inlineHelpText>
        <label>Current Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__somsa_title__c</fullName>
        <inlineHelpText>User-defined Title for this Master Services Agreement.  Value can be alpha-numeric, up to 50 characters in length.</inlineHelpText>
        <label>Master Services Agreement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Master Services Agreement Template</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Master_Services_Agreement_Template</fullName>
        <columns>NAME</columns>
        <columns>rstk__somsa_div__c</columns>
        <columns>rstk__somsa_title__c</columns>
        <columns>rstk__somsa_desc__c</columns>
        <columns>rstk__somsa_active__c</columns>
        <columns>rstk__somsa_resp__c</columns>
        <columns>rstk__somsa_currev__c</columns>
        <columns>rstk__somsa_revdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Master Services Agreement Template</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Master Services Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Services Agreement Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Division_Required</fullName>
        <active>true</active>
        <description>Division is required</description>
        <errorConditionFormula>ISBLANK(rstk__somsa_div__c)</errorConditionFormula>
        <errorMessage>Sales Division is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Master_Services_Agreement_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( rstk__somsa_title__c )</errorConditionFormula>
        <errorMessage>Master Service Agreement is required</errorMessage>
    </validationRules>
</CustomObject>